mcabber (0.10.0-dev)

 * Switch to the Loudmouth library (franky)
 * Add support for modules in mcabber (Myhailo Danylenko)
 * Message Receipts (XEP-0184) support (franky)
 * Update of Entity Capabilities support (franky)
 * Allow changing the nickname in MUC bookmarks (Myhailo Danylenko)

 -- Mikael, ?

mcabber (0.9.10)

 * Include Franky's mcabber user guide
 * Add option "use_mouse" (franky)
 * Reduce the CPU usage when the server is unreachable
 * Export the FIFO pipe name as an environment variable (Lukas Kuklinek)
 * Add support for spellchecking with Enchant (caolan)
 * Add --compact parameter to /room names (shizeeg)
 * Add count parameter to roster up/down command (knyar)
 * Misc. fixes and improvements

 -- Mikael, 2009-10-06

mcabber (0.9.9)

 * Fix uninitialized pointer (reported by T. Glaser)
 * Clean up FIFO on SIGTERM (T. Glaser)
 * New Czech translation
 * Update PL and NL help files

 -- Mikael, 2008-10-09

mcabber (0.9.8)

 * [UI] A new message flag (O) shows when OTR is used
 * [UI] For folded groups, the number of unfiltered contacts is
   displayed (franky)
 * MCabber adds a random resource suffix by default
   There is a new option 'disable_random_resource' to disable it.
 * New command: /buffer save (save the contents of a buffer to a file)
 * New command: /echo (display a message in the log window)
 * New option 'fifo_ignore' (Suggested by T. Glaser)
 * New option 'info' to display arbitrary strings in the status bar (franky)
 * New option 'iq_hide_requests'
 * New option 'url_regex' to extract URLs and display them in the log
   window (franky)
 * New pastebin/tiny-er event script (Alexander Clouter/Jamie Lentin)
 * /roster hide/toggle doesn't automatically enable chat mode anymore
 * '#' is displayed on the buddy status line when the current contact has
   unread messages (M. Vuets)
 * /room bookmark shows more information (autojoin, nick...)
 * [MUC] Nickname colors now depend on nicknames (M. Vuets)
 * [MUC] The topic can be cleared